SyntacticAnalyzer/tests/fail/herencia02.java
class foo extends {
// falta el identificador de la clase que esta extendiendo
}


